# NinjaType

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: animations.js  game.js  index.html  main.js  sounds.js  styles.css  utils.js
ui/bharath/: app99.js  index99.html  styles99.css
ui/original/: org_index.html  org_main.js  org_styles.css
