[package]
name = "ninjatype"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
window-vibrancy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

